--- a/Core/View/layouts/partial/twig_header_front.phtml
+++ b/Core/View/layouts/partial/twig_header_front.phtml
@@ -1,20 +1,20 @@
-
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
     <meta charset="UTF-8"/>
     <title>{{ title(zoqa_title) }}</title>
-    <base href="{{ baseUrl() }}" />
+    <base href="{{ baseUrl() }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="profile" href="http://gmpg.org/xfn/11"/>
-    <link rel="stylesheet" href="{{ baseUrl('/public/css/bootstrap.css') }}" />
-    <link rel="stylesheet" href="{{ baseUrl('/public/css/price.css') }}" />
-    <link rel="stylesheet" href="{{ baseUrl('/public/css/font-awesome.css') }}" />
-    <link rel="stylesheet" href="{{ baseUrl('/public/css/styles.css') }}" />
-    <link rel="stylesheet" href="{{ baseUrl('/public/css/print.css') }}" media="print" />
-    <link rel="stylesheet" href="{{ baseUrl('/public/css/basket.css') }}"  />
-    <link rel="stylesheet" href="{{ baseUrl('/public/css/jcarousel.css') }}"  />
-    <link rel="shortcut icon"  href="{{ baseUrl('/public/favicon.png') }}" type="image/png" />
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/bootstrap.css') }}"/>
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/price.css') }}"/>
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/font-awesome.css') }}"/>
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/styles.css') }}"/>
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/print.css') }}" media="print"/>
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/basket.css') }}"/>
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/jcarousel.css') }}"/>
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/daterangepicker-bs3.css') }}"/>
+    <link rel="shortcut icon" href="{{ baseUrl('/public/favicon.png') }}" type="image/png"/>
 
     <script src="{{ baseUrl('/public/js/require.js') }}"></script>
     <script src="{{ baseUrl('/public/js/config.js') }}"></script>
@@ -22,10 +22,7 @@
     <script src="{{ baseUrl('/public/js/scripts/script.js') }}"></script>
 
 
-
-    <!-----------------Юля-+++------------------------>
     {#
-
     <script src="{{ baseUrl('/public/js/scripts/script.js') }}"></script>
     <script src="{{ baseUrl('/public/js/scripts/jquery.min.js') }}"></script>
     <script src="{{ baseUrl('/public/js/scripts/custom_animations.js') }}"></script>
@@ -35,7 +32,7 @@
     <script src="{{ baseUrl('/public/js/scripts/jquery.min.js') }}"></script>
     <script src="{{ baseUrl('/public/js/jcarousel.js') }}"></script>
     #}
-    <!------------------------------------------>
+
 
     <!-- For IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -53,12 +50,13 @@
 </head>
 <body data-spy="scroll" data-bluz-module="{{ module() }}" data-bluz-controller="{{ controller() }}">
 <!-----------------Юля------------------------->
- 
+
 <div id="wrapper">
     <header>
         <div class="wrapper-header">
             <div class="wrapper-header-text">
                 <h1 class="logo"><a href="{{ baseUrl('/') }}"><img src="public/images/logo2.png"></a></h1>
+
                 <div class="row">
                     <span class="phone-text">Заказ:</span>
                     <span class="phone"> (093) 123-51-40</span>
@@ -68,7 +66,7 @@
                 </div>
                 <div class="search-wrapper">
                     <div class="search-wrapper-for-substrate">
-                        <div class="search-substrate"> <input type="text" id="search-global-field"> </div>
+                        <div class="search-substrate"><input type="text" id="search-global-field"></div>
                     </div>
                     <button class="search" id="search-global-btn">Искать</button>
                 </div>
@@ -83,29 +81,34 @@
     {# JS not allow read headers of current request, only for XMLHTTPRequests :( #}
 
     <script>
-        require(['bluz.notify'], function(notify) {
-            notify.set({{ getMessages() }} );
+        require(['bluz.notify'], function (notify) {
+            notify.set({
+            {
+                getMessages()
+            }
         });
+        })
+        ;
 
     </script>
     {% endif %}
 
     <script>
-        require(["jquery"],  function ($) {
+        require(["jquery"], function ($) {
 
-                $("#search-global-btn").off().on("click",function(e){
+            $("#search-global-btn").off().on("click", function (e) {
+                var search = $("#search-global-field").val()
+                window.location = "поиск/" + search
+            });
+
+            $("#search-global-field").on("keypress", function (e) {
+                var code = e.keyCode || e.which;
+
+                if (code == 13) {
                     var search = $("#search-global-field").val()
                     window.location = "поиск/" + search
-                });
-
-                $("#search-global-field").on("keypress",function(e){
-                    var code = e.keyCode || e.which;
-
-                    if(code == 13){
-                        var search = $("#search-global-field").val()
-                        window.location = "поиск/" + search
-                    }
-                });
+                }
+            });
         });
     </script>
 
