Меню Пополнение счета

--- a/modules/My/view/Base.phtml
+++ b/modules/My/view/Base.phtml
@@ -1,12 +1,23 @@
-<h4>Уважаемый Пользователь!</h4>
-<p>Благодарим за регистрацию на нашем сайте!</p>
-<p>Мы рады предложить пилотную версию проекта <strong>Кексик.укр</strong>. </p>
-<p>Оплата продуктов производится через кредитный счет либо наличными. <br>
-    Для пополнения кредитного счёта нужно:<br>
-    - пополнить карту Приватбанка <strong> 5168-7423-3562-8933 {#5363-5423-0371-6840#}</strong> (Чернов Артем
-    Александрович);<br>
-    - отправить СМС на наш номер, в котором указана сумма и Ваше имя на сайте.<br>
-    Имя можно опустить, если в персональных данных Вы сохранили номер Вашего телефона.
-</p>
-<br>
-<p>Желаем приятных покупок!</p>
+
+
+{% if(popolnenie ==1) %}
+    <p>Для пополнения кредитного счёта нужно:<br>
+        - пополнить карту Приватбанка <strong> 5168-7423-3562-8933 {#5363-5423-0371-6840#}</strong> (Чернов Артём
+        Александрович);<br>
+        - отправить СМС на наш номер, в котором указана сумма и Ваше имя на сайте.<br>
+        Имя можно опустить, если в персональных данных Вы сохранили номер Вашего телефона.
+    </p>
+{% else %}
+    <h4>Уважаемый Пользователь!</h4>
+    <p>Благодарим за регистрацию на нашем сайте!</p>
+    <p>Мы рады предложить пилотную версию проекта <strong>Кексик.укр</strong>. </p>
+    <p>Оплата продуктов производится через кредитный счет либо наличными. <br>
+        Для пополнения кредитного счёта нужно:<br>
+        - пополнить карту Приватбанка <strong> 5168-7423-3562-8933 {#5363-5423-0371-6840#}</strong> (Чернов Артём
+        Александрович);<br>
+        - отправить СМС на наш номер, в котором указана сумма и Ваше имя на сайте.<br>
+        Имя можно опустить, если в персональных данных Вы сохранили номер Вашего телефона.
+    </p>
+    <br>
+    <p>Желаем приятных покупок!</p>
+{% endif %}
