--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,9 @@ caption, th, td {
     font-weight: normal;
     text-align: left;
 }
+table td {
+    vertical-align: middle;
+}
 /* remove possible quote marks (") from <q> & <blockquote> */
 blockquote:before, blockquote:after, q:before, q:after {
     content: "";
