--- a/modules/My/view/grid-add-products.phtml
+++ b/modules/My/view/grid-add-products.phtml
@@ -1,9 +1,10 @@
 <script>
-         require(["bluz.grid"]);
-     </script>
+          require(["bluz.grid"]);
+
+</script>
  
  {% set grid_path = 'products/grid-categories-to-products' %}
- 
+
  {% if(gid == 'category-products') %}
  <div class="clearfix asd" data-spy="gridasd" data-id="" data-grid="{{ gid }}-{{ attribute(grid_products, 'getUid')  }}"
             data-url="products/grid-categories-to-products/gid/{{ gid }}">
@@ -81,7 +82,7 @@
                                          {% if(gid == 'category-products') %}
                                          <a href="{{ grid_fullpath_with_params }}/products_id/{{ row['products_id'] }}" onclick="javascript:return false" class="drop-item confirm btn btn-xs btn-danger" data-ajax-method="delete" data-ajax-type="html" data-id="{{ row['products_id'] }}"><i class="fa fa-times"></i></a>
                                          {% elseif(gid == 'add-products') %}
-                                         <a href="{{ grid_fullpath_with_params }}/products_id/{{ row['products_id'] }}" onclick="javascript:return false"   class="add-item" data-id="{{ row['products_id'] }}"><i class="fa fa-plus"></i> </a>
+                                         <a href="{{ grid_fullpath_with_params }}/products_id/{{ row['products_id'] }}/orders_id/{{ orders_id }}" onclick="javascript:return false"   class="add-item" data-id="{{ row['products_id'] }}"><i class="fa fa-plus"></i> </a>
                                          {% endif %}
                                          <!--a href="{{ url('test', 'crud', {'id' : row['id']}) }}" class="confirm btn btn-xs btn-danger ajax" data-ajax-method="delete">
                          <i class="fa fa-times"></i>
